<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="unipay_tenpay_yz_phone_text">验证码已发送至手机<xliff:g id="phone">%s</xliff:g></string>
    <string name="unipay_tenpay_yz_cftphone_text">验证码已发送至手机<xliff:g id="phone">%s</xliff:g></string>
    <string name="unipay_tenpay_network_error">连接网络失败</string>
    <string name="unipay_tenpay_http_check_network_wifi">请检查是否正确登录wifi</string>
    <string name="unipay_tenpay_utils_unknown_error">发生未知错误</string>
    <string name="unipay_tenpay_init_progress">请稍候...</string>
    <string name="unipay_tenpay_alert">提示</string>
    <string name="unipay_tenpay_exit_message">确定要退出吗？</string>
    <string name="unipay_tenpay_ok">确定</string>
    <string name="unipay_tenpay_cancel">取消</string>
    <string name="unipay_tenpay_resend">重新获取</string>
    <string name="unipay_tenpay_resend_time">秒后\n可 </string>
    <string name="unipay_tenpay_more_bank">添加银行卡 </string>
    <string name="unipay_tenpay_set_pass">设置财付通支付密码(请勿与银行卡密码相同)</string>
    <string name="unipay_tenpay_set_pass_next_hint">下次输入该密码即可完成支付,安全更快捷</string>
    <string name="unipay_tenpay_set_pass_next_hint2">请再次填写以确认</string>
    <string name="unipay_tenpay_set_pass_samefail">两次输入密码不一致</string>
    <string name="unipay_tenpay_set_pass_hint">设置财付通支付密码 </string>
    <string name="unipay_tenpay_yz_cft_pass">验证财付通支付密码 </string>
    <string name="unipay_tenpay_yz_cft_pass_hint">验证财付通支付密码，保障资金交易安全 </string>
    <string name="unipay_tenpay_cft_pass">财付通支付密码 </string>
    <string name="unipay_tenpay_pay_yue_txt">财付通余额支付 </string>
    <string name="unipay_tenpay_pay_agreement_error">您需要同意《快捷支付服务及相关协议》才能完成本次支付!</string>
    <string name="unipay_tenpay_alert_psd_wrong">请输入6-16位的财付通支付密码</string>
    <string name="unipay_tenpay_alert_psd_wrong1">请输入6位的财付通支付密码</string>
    <string name="unipay_tenpay_alert_psd_simple">六位相同的支付密码弱爆了，请重新设置</string>
    <string name="unipay_tenpay_bank_card_not_null">银行卡号最少16位</string>
    <string name="unipay_tenpay_valid_time_not_null">请输入正确的有效期</string>
    <string name="unipay_tenpay_valid_time_out">您输入的银行卡有效期已经过期</string>
    <string name="unipay_tenpay_cvv_not_null">请输入信用卡背后的3位CVV数字</string>
    <string name="unipay_tenpay_user_name_not_null">持卡人姓名不能为空</string>
    <string name="unipay_tenpay_phone_not_null">请输入正确的手机号码</string>
    <string name="unipay_tenpay_idcard_not_null">身份证号码输入有误，请核对</string>
    <string name="unipay_tenpay_cft_account_name">账户余额:</string>
    <string name="unipay_tenpay_yuan">元</string>
    <string name="unipay_tenpay_alert_yz_code_wrong">请检查您输入的验证码是否正确</string>
    <string name="unipay_tenpay_alert_kuai_bank_wrong">您没有绑定的银行卡</string>
    <string name="unipay_tenpay_alert_kuai_resend_ok">已重新发送验证码</string>
    <string name="unipay_tenpay_debit_card_hint">储蓄卡卡号</string>
    <string name="unipay_tenpay_credit_card_hint">信用卡卡号</string>
    <string name="unipay_tenpay_login_error">登录超时，请重新登录后再进行支付</string>
    <string name="unipay_tenpay_pass_time_error">支付超时，请重新提交订单</string>
    <string name="unipay_tenpay_more">更换</string>
    <string name="unipay_tenpay_agreement"><u>财付通快捷支付协议</u></string>
    <string name="unipay_tenpay_num">数量</string>
    <string name="unipay_tenpay_colon">:</string>
    <string name="unipay_tenpay_fee">总价</string>
    <string name="unipay_tenpay_$">￥</string>
    <string name="unipay_tenpay_next">下一步</string>
    <string name="unipay_tenpay_sms_code">短信验证码</string>
    <string name="unipay_tenpay_pay">立即支付</string>
    <string name="unipay_tenpay_forget_pass"><U>忘记密码?点此支付</U></string>
    <string name="unipay_tenpay_debit">储蓄卡</string>
    <string name="unipay_tenpay_credit">信用卡</string>
    <string name="unipay_tenpay_card_no">暂不支持</string>
    <string name="unipay_tenpay_m">月</string>
    <string name="unipay_tenpay_y">年</string>
    <string name="unipay_tenpay_thru">有效期(月份/年份)</string>
    <string name="unipay_tenpay_sign">卡背面末3位数</string>
    <string name="unipay_tenpay_binfo">银行预留个人信息</string>
    <string name="unipay_tenpay_uid">身份证号码</string>
    <string name="unipay_tenpay_uname">真实姓名</string>
    <string name="unipay_tenpay_uphone">预留手机号码</string>
    <string name="unipay_tenpay_bankname">请输入持卡人姓名</string>
    <string name="unipay_tenpay_bankident">请输入持卡人身份证号</string>
    <string name="unipay_tenpay_bankphone">请输入银行预留手机号</string>
    <string name="unipay_tenpay_uagree">同意</string>
    <string name="unipay_tenpay_l">《</string>
    <string name="unipay_tenpay_r">》</string>
    <string name="unipay_tenpay_alert_new">温馨提示</string>
    <string name="unipay_tenpay_new_input_bank_alert">以下支付服务由财付通提供，请放心填写</string>
    <string name="unipay_tenpay_find_pass_alert">重填卡信息，完成本次支付</string>
    <string name="unipay_tenpay_yz_hint">输入短信验证码</string>
    <string name="unipay_tenpay_btnonlycard">只有一张卡</string>
    <string name="unipay_tenpay_btnothercard">使用其他卡</string>
    <string name="unipay_tenpay_do">完成</string>
    <string name="unipay_tenpay_bankno">请输入银行卡卡号</string>
    <string name="unipay_tenpay_bankselect">请选择相应银行卡类型</string>
    <string name="unipay_tenpay_safe">财付通五重加密技术，保障您的信息安全</string>
    <string name="unipay_tenpay_cd_safe">tenpay_piosafe</string>
    <string name="unipay_tenpay_wavbgicon">tenpay_wavbgicon</string>
    <string name="unipay_tenpay_viplogo">tenpay_viplogo</string>
    <string name="unipay_tenpay_closebtn">tenpay_closebtn</string>
    <string name="unipay_tenpay_multiply">&#160;x&#160;</string>
    <string name="unipay_tenpay_rmb">￥</string>
    <string name="unipay_tenpay_service">财付通保障您的支付安全</string>
    <string name="unipay_tenpay_bin_fill_card">添加银行卡</string>
    <string name="unipay_tenpay_select_card">请选择银行卡</string>
    <string name="unipay_tenpay_binded_card">已绑定</string>
    <string name="unipay_tenpay_warnpic">warnpic</string>
    <string name="unipay_tenpay_iconwen">iconwen</string>
    <string name="unipay_tenpay_ple_sel_bank">请选择银行卡类型</string>
    <string name="unipay_tenpay_sure_bank"></string>
    <string name="unipay_tenpay_x">字母X</string>
    <string name="unipay_tenpay_done">完成</string>
    <string name="unipay_tenpay_supply">以下服务由财付通为您提供</string>
    <string name="unipay_tenpay_safe_bank">银行授权，安全支付</string>
    <string name="unipay_tenpay_set_newphone">更新手机号</string>
    <string name="unipay_tenpay_set_newthru">更新有效期</string>
    <string name="unipay_tenpay_youxiaoqi_hint">有效期（如03/17,请输入0317）</string>
    <string name="unipay_tenpay_change_phone">更新手机号</string>
    <string name="unipay_tenpay_change_phone_hint">银行预留手机号码</string>
    <string name="unipay_tenpay_change_phone_alert">如果<xliff:g id="tail">%s</xliff:g>不是您在银行的预留手机号,请及时更新.</string>
    <string name="unipay_tenpay_change_thru">更新有效期</string>
    <string name="unipay_tenpay_change_thru_alert">您尾号为<xliff:g id="tail">%s</xliff:g>的<xliff:g id="bank">%s</xliff:g>即将过期,如已收到并激活了新卡,请更新有效期后继续支付.</string>
    <string name="unipay_tenpay_change_thru_alert1">您尾号为<xliff:g id="tail">%s</xliff:g>的<xliff:g id="bank">%s</xliff:g>已过期,如已收到并激活了新卡,请更新有效期后继续支付.</string>
    <string name="unipay_tenpay_change_thru_notnow">暂时不用</string>
    <string name="unipay_tenpay_change_thru_now">立即更新</string>
    <string name="unipay_tenpay_change_thru_now1">更新</string>
    <string name="unipay_tenpay_nopwdnosms">本次交易免验证,点击直接付款</string>
    <string name="unipay_tenpay_sms_add">为了本次交易安全，需要短信验证</string>

</resources>