<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/unipay_tenpay_linear" >

    <!-- cft begin -->

    <LinearLayout style="@style/unipay_tenpay_linear_hori" >

        <TextView
            style="@style/unipay_tenpay_text.middle"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/unipay_tenpay_set_newthru" />

        <TextView
            android:id="@+id/reset_credit_card"
            style="@style/unipay_tenpay_text.middlethin"
            android:layout_marginBottom="10dp" />
    </LinearLayout>
    <!-- 输入框 -->

    <LinearLayout
        style="@style/unipay_tenpay_linear.margin"
        android:orientation="vertical" >

        <com.tenpay.tenpayplugin.view.ValidDateEdit
            android:id="@+id/reset_credit_thru"
            style="@style/unipay_tenpay_edit"
            android:hint="@string/unipay_tenpay_thru"
            android:inputType="number"
            android:maxLength="5" />

        <com.tenpay.tenpayplugin.view.TenpayEditText
            android:id="@+id/reset_credit_cvv"
            style="@style/unipay_tenpay_edit"
            android:hint="@string/unipay_tenpay_sign"
            android:inputType="number"
            android:maxLength="3"
            android:visibility="gone" />
    </LinearLayout>
    <!-- btn -->

    <LinearLayout style="@style/unipay_tenpay_tipbtn" >

        <Button
            android:id="@+id/reset_thru_confirm"
            style="@style/unipay_tenpay_btn"
            android:text="@string/unipay_tenpay_next" />
    </LinearLayout>

</LinearLayout>