<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/unipay_tenpay_linear" >

    <LinearLayout
        style="@style/unipay_tenpay_linear"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/kuai_discount"
            style="@style/unipay_tenpay_text.middle"
            android:layout_width="0dp"
            android:layout_weight="100" />

        <Button
            android:id="@+id/kuai_more"
            style="@style/unipay_tenpay_iconchange2" />
    </LinearLayout>
    <!-- 银行卡快捷 -->

    <LinearLayout
        android:id="@+id/kuai_bank"
        style="@style/unipay_tenpay_edit.nofocus" >

        <TextView
            android:id="@+id/kuai_bank_name"
            style="@style/unipay_tenpay_text"
            android:layout_width="fill_parent"
            android:layout_weight="2" />

        <ImageButton
            android:id="@+id/kuai_bank_btn"
            style="@style/unipay_tenpay_wrap.iconchange" />
    </LinearLayout>

    <EditText
        android:id="@+id/kuai_pass"
        style="@style/unipay_tenpay_edit"
        android:hint="@string/unipay_tenpay_cft_pass"
        android:inputType="textPassword"
        android:maxLength="16" />

    <Button
        android:id="@+id/kuai_forget_pass"
        style="@style/unipay_tenpay_text.forgetpwd"
        android:background="@null"
        android:paddingBottom="10dp"
        android:visibility="gone" />
    <!-- bottom info -->

    <LinearLayout
        android:id="@+id/kuai_nopwdnosms"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/unipay_tenpay_dunpai" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:text="@string/unipay_tenpay_nopwdnosms"
            android:textColor="#808080"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout style="@style/unipay_tenpay_tipbtn" >

        <Button
            android:id="@+id/kuai_confirm"
            style="@style/unipay_tenpay_btn"
            android:text="@string/unipay_tenpay_pay" />
    </LinearLayout>

</LinearLayout>